[project]
name = "techtenstein-slug-mcp"
version = "1.0.0"
description = "MCP server for Techtenstein Slug API — Unicode URL slug generator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Techtenstein", email = "sathvickollu@gmail.com"}]
keywords = ["mcp", "slug", "url", "unicode", "cloudflare"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["mcp>=1.2.0", "httpx>=0.27.0"]

[project.scripts]
techtenstein-slug-mcp = "server:main"

[project.urls]
Homepage = "https://slug-api.techtenstein.workers.dev"
Source = "https://github.com/techtenstein-labs/techtenstein-slug-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py"]

[tool.hatch.build.targets.sdist]
only-include = ["server.py", "README.md", "pyproject.toml"]
